# jenkins-test-repo

ci_test1/: .sconsign.dblite  CMakeLists.txt
ci_test1/src/: CMakeLists.txt  add.c  add.h
ci_test1/test/: CMakeLists.txt  add_test.c
